// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LayerApp matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <LayerApp
    classes={
      Object {
        "blue": "blue",
        "content": "content",
        "layerApp": "layerApp",
        "white": "white",
      }
    }
    fixed={false}
    theme="blue"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <Jss(SubHeader)
          center={undefined}
          fixed={false}
          left={undefined}
          right={undefined}
          theme="blue"
        />,
        <div
          className="content"
        />,
      ],
      "className": "layerApp blue",
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "class",
        "props": Object {
          "center": undefined,
          "fixed": false,
          "left": undefined,
          "right": undefined,
          "theme": "blue",
        },
        "ref": null,
        "rendered": null,
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": undefined,
          "className": "content",
        },
        "ref": null,
        "rendered": null,
        "type": "div",
      },
    ],
    "type": "div",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <Jss(SubHeader)
            center={undefined}
            fixed={false}
            left={undefined}
            right={undefined}
            theme="blue"
          />,
          <div
            className="content"
          />,
        ],
        "className": "layerApp blue",
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "center": undefined,
            "fixed": false,
            "left": undefined,
            "right": undefined,
            "theme": "blue",
          },
          "ref": null,
          "rendered": null,
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": undefined,
            "className": "content",
          },
          "ref": null,
          "rendered": null,
          "type": "div",
        },
      ],
      "type": "div",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`LayerAppJSS matches the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Jss(LayerApp)
    fixed={false}
    theme="blue"
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "classes": Object {
        "blue": "LayerApp-blue-0-1-3",
        "content": "LayerApp-content-0-1-2",
        "layerApp": "LayerApp-layerApp-0-1-1",
        "white": "LayerApp-white-0-1-4",
      },
      "fixed": false,
      "theme": "blue",
    },
    "ref": null,
    "rendered": null,
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "classes": Object {
          "blue": "LayerApp-blue-0-1-3",
          "content": "LayerApp-content-0-1-2",
          "layerApp": "LayerApp-layerApp-0-1-1",
          "white": "LayerApp-white-0-1-4",
        },
        "fixed": false,
        "theme": "blue",
      },
      "ref": null,
      "rendered": null,
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
